--- a/.gitignore
+++ b/.gitignore
@@ -229,7 +229,8 @@ ClientBin/
 *.pfx
 *.publishsettings
 orleans.codegen.cs
-*.json
+appsettings.json
+
 
 # Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
