--- a/API_Project_2/API_Project_2.csproj
+++ b/API_Project_2/API_Project_2.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>e23de1c1-1c47-459a-92ee-2281a608734e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
